--- a/UFO-level-1/static/css/style.css
+++ b/UFO-level-1/static/css/style.css
@@ -10,6 +10,10 @@ body {
   margin: 0;
 }
 
+.cursor {
+  cursor: url("../images/cursor.png"), auto;
+}
+
 /* The wrapper contains all of the page's content besides the footer, which is pushed to the bottom of the page */
 .wrapper {
   position: relative;
@@ -21,6 +25,7 @@ body {
 .navbar {
   padding: 5px;
   margin: 0;
+  background-color: rgba(78, 185, 150, 0.822);
 }
 
 /* This CSS styles the ufo icon in the navbar */
