--- a/UFO-level-1/static/css/style.css
+++ b/UFO-level-1/static/css/style.css
@@ -8,7 +8,6 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  cursor: url("../images/cursor.png"), auto;
 }
 
 /* The wrapper contains all of the page's content besides the footer, which is pushed to the bottom of the page */
@@ -17,6 +16,7 @@ body {
   min-height: 100%;
   padding-bottom: 130px;
   overflow: auto;
+  background-color: #383838;
 }
 
 .navbar {
@@ -32,6 +32,7 @@ body {
   left: 150px;
   width: 35px;
   color: white;
+  cursor: url("../images/cursor.png"), auto;
 }
 
 /* Adding styles to the aside and filter form */
@@ -41,6 +42,7 @@ body {
 
 .filters .panel-body {
   padding: 0;
+  
 }
 
 .filters {
@@ -58,12 +60,20 @@ select {
 #table-area th {
   text-align: center;
   text-transform: capitalize;
+  background-color: rgba(44, 44, 44, 0.87);
+}
+
+#tbody {
+  
+  background-color: rgba(78, 185, 150, 0.822);
+
 }
 
 #table-area th:first-child,
 #table-area th:nth-child(2),
 #table-area th:nth-child(6) {
   min-width: 70px;
+  
 }
 
 .loader {
